--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -1,3 +1,4 @@
+/* vertical */
 .vertItem {
     flex-direction: column;
 }
@@ -5,4 +6,18 @@
 .imgCol ,.textCol {
     max-width: 100%;
     padding: 5px 0;
+}
+
+/* horizontal */
+.horizontal {
+    flex-direction: column;
+}
+
+.horiOverview {
+    max-width: 100%;
+}
+
+.horiItems {
+    max-width: 100%;
+    overflow-x: scroll;
 }
