--- a/src/css/style.css
+++ b/src/css/style.css
@@ -48,13 +48,10 @@ h1, h2, h3, h4, h5, h6 {
 /* horizontal */
 .horizontal {
     display: flex;
-    flex-direction: row;
     height: auto;
-    overflow-x: scroll;
 }
 
 .horiOverview {
-    max-width: 50%;
     width: 100%;
     padding: 20px 15px;
 }
@@ -84,7 +81,6 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     flex-direction: row;
     width: 100%;
-    max-width: 50%;
 }
 
 .horiItem {
